--- a/arch/arm/configs/cyanogenmod_k920_defconfig
+++ b/arch/arm/configs/cyanogenmod_k920_defconfig
@@ -1320,6 +1320,8 @@ CONFIG_QSEECOM=y
 CONFIG_QPNP_MISC=y
 CONFIG_USB_HSIC_SMSC_HUB=y
 CONFIG_TI_DRV2667=y
+CONFIG_NXP_NFC=y
+CONFIG_NXP_TFA9890=y
 # CONFIG_UID_CPUTIME is not set
 # CONFIG_C2PORT is not set
 
@@ -1667,7 +1669,9 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_CYTTSP_I2C_QC is not set
 # CONFIG_TOUCHSCREEN_FT5X06 is not set
 # CONFIG_TOUCHSCREEN_GEN_VKEYS is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4 is not set
+CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4=y
+CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI4_DEV=y
+# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE is not set
 # CONFIG_TOUCHSCREEN_GT9XX is not set
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
@@ -1697,6 +1701,8 @@ CONFIG_INPUT_GPIO=y
 # CONFIG_SENSORS_MMA8X5X is not set
 # CONFIG_SENSORS_STK3X1X is not set
 # CONFIG_SENSORS_CAPELLA_CM36283 is not set
+CONFIG_SENSORS_ISL29124=y
+CONFIG_SENSORS_HALL_SWITCH=y
 
 #
 # Hardware I/O ports
@@ -2173,7 +2179,13 @@ CONFIG_MSM_CSID=y
 CONFIG_MSM_EEPROM=y
 CONFIG_MSM_ISPIF=y
 # CONFIG_MSM_ISPIF_V1 is not set
+# CONFIG_S5K3L1YX is not set
+CONFIG_S5K2P8=y
+# CONFIG_IMX214 is not set
+# CONFIG_IMX135 is not set
 # CONFIG_IMX134 is not set
+# CONFIG_OV2720 is not set
+CONFIG_OV5693=y
 # CONFIG_OV9724 is not set
 # CONFIG_HI256 is not set
 # CONFIG_OV5648 is not set
@@ -3106,6 +3118,20 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
 # CONFIG_ANDROID_INTF_ALARM_DEV is not set
 # CONFIG_PHONE is not set
 # CONFIG_USB_WPAN_HCD is not set
+
+#
+# Qualcomm Atheros Prima WLAN module
+#
+CONFIG_PRIMA_WLAN=y
+CONFIG_PRONTO_WLAN=y
+# CONFIG_PRIMA_WLAN_BTAMP is not set
+CONFIG_PRIMA_WLAN_LFR=y
+CONFIG_PRIMA_WLAN_OKC=y
+CONFIG_PRIMA_WLAN_11AC_HIGH_TP=y
+CONFIG_WLAN_FEATURE_11W=y
+CONFIG_QCOM_VOWIFI_11R=y
+CONFIG_ENABLE_LINUX_REG=y
+CONFIG_QCOM_TDLS=y
 
 #
 # Qualcomm MSM specific device drivers
