--- a/arch/arm/configs/cyanogenmod_k920_defconfig
+++ b/arch/arm/configs/cyanogenmod_k920_defconfig
@@ -1314,7 +1314,7 @@ CONFIG_UID_STAT=y
 # CONFIG_WL127X_RFKILL is not set
 CONFIG_TSPP=y
 # CONFIG_CI_BRIDGE_SPI is not set
-CONFIG_HAPTIC_ISA1200=y
+# CONFIG_HAPTIC_ISA1200 is not set
 CONFIG_QSEECOM=y
 # CONFIG_QFP_FUSE is not set
 CONFIG_QPNP_MISC=y
