--- a/arch/arm/boot/dts/k920/msm8974-k920-leds.dtsi
+++ b/arch/arm/boot/dts/k920/msm8974-k920-leds.dtsi
@@ -207,6 +207,8 @@
 		label = "vibrator";
 		qcom,vib-timeout-ms = <15000>;
  		qcom,vib-vtg-level-mV = <2850>;
+		qcom,vib-vtg-max-mV = <3100>;
+		qcom,vib-vtg-min-mV = <1200>;
 	};
 
 	qcom,leds@e200 {
