--- a/arch/arm/boot/dts/k920/msm8974-k920-pm8941.dtsi
+++ b/arch/arm/boot/dts/k920/msm8974-k920-pm8941.dtsi
@@ -65,120 +65,93 @@
 	};
 };
 
+
 &pm8941_gpios {
 	gpio@c000 { /* GPIO 1 */
-		qcom,mode = <0>;        /* QPNP_PIN_MODE_DIG_IN */
-		qcom,pull = <0>;        /* QPNP_PIN_PULL_UP_30  */
-		qcom,master-en = <1>;
 	};
 
-	gpio@c100 { /* GPIO 2 */
-		qcom,mode = <0>;        /* QPNP_PIN_MODE_DIG_IN */
-		qcom,pull = <0>;        /* QPNP_PIN_PULL_UP_30  */
+	gpio@c100 { /* GPIO 2 < VOL_DN_N */
+		qcom,mode = <0>;		/* QPNP_PIN_MODE_DIG_IN */
+		qcom,pull = <0>;		/* QPNP_PIN_PULL_UP_30 */
 		qcom,master-en = <1>;
 	};
 
 	gpio@c200 { /* GPIO 3 */
-		qcom,mode = <0>;        /* QPNP_PIN_MODE_DIG_IN */
-		qcom,pull = <0>;        /* QPNP_PIN_PULL_UP_30  */
-		qcom,vin-sel = <2>;
-		qcom,src-sel = <0>;	/* QPNP_PIN_SEL_FUNC_CONSTANT */
-		qcom,master-en = <1>;
 	};
 
 	gpio@c300 { /* GPIO 4 */
-		qcom,mode = <0>;        /* QPNP_PIN_MODE_DIG_IN */
-		qcom,pull = <0>;        /* QPNP_PIN_PULL_UP_30  */
-		qcom,vin-sel = <2>;     /* QPNP_PIN_VIN2  */
-		qcom,src-sel = <0>;	/* QPNP_PIN_SEL_FUNC_CONSTANT */
-		qcom,master-en = <1>;
 	};
 
-	gpio@c400 { /* GPIO 5 */
-		qcom,mode = <0>;        /* QPNP_PIN_MODE_DIG_IN */
-		qcom,pull = <0>;        /* QPNP_PIN_PULL_UP_30  */
-		qcom,vin-sel = <2>;     /* QPNP_PIN_VIN2  */
-		qcom,src-sel = <0>;	/* QPNP_PIN_SEL_FUNC_CONSTANT */
+	gpio@c400 { /* GPIO 5 < VOL_UP_N */
+		qcom,mode = <0>;		/* QPNP_PIN_MODE_DIG_IN */
+		qcom,pull = <0>;		/* QPNP_PIN_PULL_UP_30 */
+		qcom,vin-sel = <2>;		/* QPNP_PIN_VIN2 */
+		qcom,src-sel = <0>;		/* QPNP_PIN_SEL_FUNC_CONSTANT */
 		qcom,master-en = <1>;
 	};
 
 	gpio@c500 { /* GPIO 6 */
-		qcom,mode = <0>;        /* QPNP_PIN_MODE_DIG_IN */
-		qcom,pull = <0>;        /* QPNP_PIN_PULL_UP_30  */
-		qcom,master-en = <1>;
 	};
 
 	gpio@c600 { /* GPIO 7 */
-		qcom,mode = <0>;        /* QPNP_PIN_MODE_DIG_IN */
-		qcom,pull = <0>;        /* QPNP_PIN_PULL_UP_30  */
-		qcom,master-en = <1>;
 	};
 
 	gpio@c700 { /* GPIO 8 */
-		qcom,mode = <0>;        /* QPNP_PIN_MODE_DIG_IN */
-		qcom,pull = <0>;        /* QPNP_PIN_PULL_UP_30  */
-		qcom,master-en = <1>;
 	};
 
 	gpio@c800 { /* GPIO 9 */
-		qcom,mode = <1>;          /* QPNP_PIN_MODE_DIG_OUT */
-		qcom,out-strength = <1>;  /* QPNP_PIN_OUT_STRENGTH_LOW */
-		qcom,src-sel = <2>;       /* QPNP_PIN_SEL_FUNC_1  */
+	};
+
+	gpio@c900 { /* GPIO 10 > CHG_EN */
+		qcom,mode = <1>;		/* QPNP_PIN_MODE_DIG_OUT */
+		qcom,output-type = <0>;		/* CMOS */
+		qcom,pull = <5>;		/* PULL_NO */
+		#qcom,out-strength = <2>;	/* QPNP_PIN_OUT_STRENGTH_MED */
+		qcom,out-strength = <1>;	/* QPNP_PIN_OUT_STRENGTH_LOW */
+		qcom,src-sel = <0>;		/* QPNP_PIN_SEL_FUN_CONSTANT */
 		qcom,master-en = <1>;
 	};
 
-	gpio@c900 { /* GPIO 10 */
-		/*BQ27530_EN*/
-		qcom,mode = <1>;          /* QPNP_PIN_MODE_DIG_OUT */
-		qcom,output-type = <0>;	  /* CMOS */
-		qcom,pull = <5>;		  /* PULL_NO */
-		#qcom,out-strength = <2>;  /* QPNP_PIN_OUT_STRENGTH_MED */
-		qcom,out-strength = <1>;  /* QPNP_PIN_OUT_STRENGTH_LOW */
-		qcom,src-sel = <0>;       /* QPNP_PIN_SEL_FUN_CONSTANT  */
+	gpio@ca00 { /* GPIO 11 > CHG_OTG */
+		qcom,mode = <1>;		/* QPNP_PIN_MODE_DIG_OUT */
+		qcom,out-strength = <1>;	/* QPNP_PIN_OUT_STRENGTH_LOW */
+		qcom,src-sel = <0>;		/* QPNP_PIN_SEL_FUNC_ */
 		qcom,master-en = <1>;
 	};
 
-	gpio@ca00 { /* GPIO 11 */
-		qcom,mode = <1>;          /* QPNP_PIN_MODE_DIG_OUT */
-		qcom,out-strength = <1>;  /* QPNP_PIN_OUT_STRENGTH_LOW */
-		qcom,src-sel = <0>;       /* QPNP_PIN_SEL_FUNC_  */
+	gpio@cb00 { /* GPIO 12 > CHG_PSEL */
+		qcom,mode = <1>;		/* QPNP_PIN_MODE_DIG_OUT */
+		qcom,output-type = <0>;		/* CMOS */
+		#qcom,out-strength = <2>;	/* QPNP_PIN_OUT_STRENGTH_MED */
+		qcom,src-sel = <0>;		/* QPNP_PIN_SEL_FUN_CONSTANT */
+		qcom,vin-sel = <0>;		/* QPNP_PIN_VIN2 */
+		qcom,pull = <5>;		/* PULL_NO */
+		#qcom,src-sel = <2>;		/* QPNP_PIN_SEL_FUNC_1 */
+		qcom,out-strength = <1>;	/* QPNP_PIN_OUT_STRENGTH_LOW */
 		qcom,master-en = <1>;
 	};
 
-	gpio@cb00 { /* GPIO 12 */
-		qcom,mode = <1>;          /* QPNP_PIN_MODE_DIG_OUT */
-		qcom,output-type = <0>;	  /* CMOS */
-		#qcom,out-strength = <2>;  /* QPNP_PIN_OUT_STRENGTH_MED */
-		qcom,src-sel = <0>;       /* QPNP_PIN_SEL_FUN_CONSTANT  */
-		qcom,vin-sel = <0>;     /* QPNP_PIN_VIN2  */
-		qcom,pull = <5>;		  /* PULL_NO */
-		#qcom,src-sel = <2>;       /* QPNP_PIN_SEL_FUNC_1  */
-		qcom,out-strength = <1>;  /* QPNP_PIN_OUT_STRENGTH_LOW */
-		qcom,master-en = <1>;
-	};
-
-	/* dsi1: enable-gpio */
-	gpio@cc00 { /* GPIO 13 */
-		qcom,mode = <1>;          /* QPNP_PIN_MODE_DIG_OUT */
+	gpio@cc00 { /* GPIO 13 > LCD_BL_EN */
+		qcom,mode = <1>;		/* QPNP_PIN_MODE_DIG_OUT */
 		qcom,output-type = <0>;
 		qcom,pull = <5>;
 		qcom,vin-sel = <3>;
-		qcom,out-strength = <1>;  /* QPNP_PIN_OUT_STRENGTH_LOW */
-		qcom,src-sel = <0>;       /* function: output 1*/ 
+		qcom,out-strength = <1>;	/* QPNP_PIN_OUT_STRENGTH_LOW */
+		qcom,src-sel = <0>;		/* function: output 1*/ 
 		qcom,master-en = <1>;
 	};
 
-	gpio@cd00 { /* GPIO 14 */
-		qcom,mode = <1>;          /* QPNP_PIN_MODE_DIG_OUT */
-		qcom,output-type = <0>;	  /* CMOS */
-		qcom,out-strength = <1>;  /* QPNP_PIN_OUT_STRENGTH_LOW */
-		#qcom,src-sel = <2>;       /* QPNP_PIN_SEL_FUNC_1  */
-		qcom,src-sel = <0>;       /* QPNP_PIN_SEL_FUN_CONSTANT  */
-		qcom,vin-sel = <0>;     /* QPNP_PIN_VIN2  */
+	gpio@cd00 { /* GPIO 14 > PMIC_USB_SW_EN */
+		qcom,mode = <1>;		/* QPNP_PIN_MODE_DIG_OUT */
+		qcom,output-type = <0>;		/* CMOS */
+		qcom,out-strength = <1>;	/* QPNP_PIN_OUT_STRENGTH_LOW */
+		#qcom,src-sel = <2>;		/* QPNP_PIN_SEL_FUNC_1 */
+		qcom,src-sel = <0>;		/* QPNP_PIN_SEL_FUN_CONSTANT */
+		qcom,vin-sel = <0>;		/* QPNP_PIN_VIN2 */
 		qcom,master-en = <1>;
 	};
 
-	gpio@ce00 { /* GPIO 15 */
+	gpio@ce00 { /* GPIO 15 > DIVCLK1_CODEC */
 		qcom,mode = <1>;
 		qcom,output-type = <0>;
 		qcom,pull = <5>;
@@ -189,13 +162,6 @@
 	};
 
 	gpio@cf00 { /* GPIO 16 */
-		qcom,mode = <1>;
-		qcom,output-type = <0>;
-		qcom,pull = <5>;
-		qcom,vin-sel = <2>;
-		qcom,out-strength = <3>;
-		qcom,src-sel = <3>;       /* QPNP_PIN_SEL_FUNC_2  */
-		qcom,master-en = <1>;
 	};
 
 	gpio@d000 { /* GPIO 17 */
@@ -204,8 +170,7 @@
 	gpio@d100 { /* GPIO 18 */
 	};
 
-	/* dsi1: reset-gpio */
-	gpio@d200 { /* GPIO 19 */
+	gpio@d200 { /* GPIO 19 > DISP_RESET_N */
 		qcom,mode = <1>;		/* QPNP_PIN_MODE_DIG_OUT */
 		qcom,output-type = <0>;		/* QPNP_PIN_OUT_BUF_CMOS */
 		qcom,pull = <5>;		/* QPNP_PIN_PULL_NO */
@@ -215,178 +180,119 @@
 		qcom,master-en = <1>;
 	};
 
-	gpio@d300 { /* GPIO 20 */
-		qcom,mode = <1>;          /* QPNP_PIN_MODE_DIG_OUT */
-		qcom,out-strength = <1>;  /* QPNP_PIN_OUT_STRENGTH_LOW */
-		qcom,src-sel = <2>;       /* QPNP_PIN_SEL_FUNC_1  */
+	gpio@d300 { /* GPIO 20 > AUDIOJK_SWITCH_EN */
+		qcom,mode = <1>;		/* QPNP_PIN_MODE_DIG_OUT */
+		qcom,out-strength =<1>;		/* QPNP_PIN_OUT_STRENGTH_LOW */
+		qcom,src-sel = <2>;		/* QPNP_PIN_SEL_FUNC_1 */
 		qcom,master-en = <1>;
 	};
 
-	gpio@d400 { /* GPIO 21 */
+	gpio@d400 { /* GPIO 21 > BOOST_BYP_BYP */
 	};
 
 	gpio@d500 { /* GPIO 22 */
-		qcom,mode = <0>;        /* QPNP_PIN_MODE_DIG_IN */
-		qcom,pull = <4>;	/* QPNP_PIN_PULL_DN */
+		qcom,mode = <0>;		/* QPNP_PIN_MODE_DIG_IN */
+		qcom,pull = <4>;		/* QPNP_PIN_PULL_DN */
 		qcom,master-en = <1>;
 	};
 
 	gpio@d600 { /* GPIO 23 */
-		qcom,mode = <1>;          /* QPNP_PIN_MODE_DIG_OUT */
-		qcom,out-strength = <1>;  /* QPNP_PIN_OUT_STRENGTH_LOW */
-		qcom,src-sel = <2>;       /* QPNP_PIN_SEL_FUNC_1  */
-		qcom,master-en = <1>;
 	};
 
 	gpio@d700 { /* GPIO 24 */
-		qcom,mode = <1>;          /* QPNP_PIN_MODE_DIG_OUT */
-		qcom,out-strength = <1>;  /* QPNP_PIN_OUT_STRENGTH_LOW */
-		qcom,src-sel = <2>;       /* QPNP_PIN_SEL_FUNC_1  */
-		qcom,master-en = <1>;
 	};
 
 	gpio@d800 { /* GPIO 25 */
-		qcom,mode = <1>;          /* QPNP_PIN_MODE_DIG_OUT */
-		qcom,out-strength = <1>;  /* QPNP_PIN_OUT_STRENGTH_LOW */
-		qcom,src-sel = <2>;       /* QPNP_PIN_SEL_FUNC_1  */
+	};
+
+	gpio@d900 { /* GPIO 26 > LCD_BL_PWM */
+		qcom,mode = <1>;		/* QPNP_PIN_MODE_DIG_OUT */
+		qcom,out-strength = <1>;	/* QPNP_PIN_OUT_STRENGTH_LOW */
+		qcom,src-sel = <2>;		/* QPNP_PIN_SEL_FUNC_1 */
 		qcom,master-en = <1>;
 	};
 
-	gpio@d900 { /* GPIO 26 */
-		qcom,mode = <1>;          /* QPNP_PIN_MODE_DIG_OUT */
-		qcom,out-strength = <1>;  /* QPNP_PIN_OUT_STRENGTH_LOW */
-		qcom,src-sel = <2>;       /* QPNP_PIN_SEL_FUNC_1  */
+	gpio@da00 { /* GPIO 27 < FLASH_LED_NOW */
+		qcom,mode = <0>;		/* QPNP_PIN_MODE_DIG_IN */
+		qcom,pull = <4>;		/* QPNP_PIN_PULL_DN */
 		qcom,master-en = <1>;
 	};
 
-	gpio@da00 { /* GPIO 27 */
-		qcom,mode = <0>;        /* QPNP_PIN_MODE_DIG_IN */
-		qcom,pull = <4>;	/* QPNP_PIN_PULL_DN */
-		qcom,master-en = <1>;
-	};
-
-	gpio@db00 { /* GPIO 28 */
+	gpio@db00 { /* GPIO 28 < TX_GTR_THRES */
 	};
 
 	gpio@dc00 { /* GPIO 29 */
-		qcom,mode = <1>;          /* QPNP_PIN_MODE_DIG_OUT */
-		qcom,out-strength = <1>;  /* QPNP_PIN_OUT_STRENGTH_LOW */
-		qcom,src-sel = <2>;       /* QPNP_PIN_SEL_FUNC_1  */
-		qcom,master-en = <1>;
 	};
 
 	gpio@dd00 { /* GPIO 30 */
-		qcom,mode = <0>;        /* QPNP_PIN_MODE_DIG_IN */
-		qcom,pull = <4>;	/* QPNP_PIN_PULL_DN */
-		qcom,master-en = <1>;
 	};
 
-	gpio@de00 { /* GPIO 31 */
+	gpio@de00 { /* GPIO 31 > BATT_REM_ALARM */
 	};
 
 	gpio@df00 { /* GPIO 32 */
-		qcom,mode = <0>;        /* QPNP_PIN_MODE_DIG_IN */
-		qcom,pull = <5>;	/* QPNP_PIN_PULL_DN */
-		qcom,vin-sel = <2>;	/* QPNP_PIN_VIN2 */
-		qcom,src-sel = <2>;	/* QPNP_PIN_SEL_FUNC_1 */
-		qcom,master-en = <1>;
 	};
 
 	gpio@e000 { /* GPIO 33 */
-		qcom,mode = <0>;        /* QPNP_PIN_MODE_DIG_IN */
-		qcom,pull = <4>;	/* QPNP_PIN_PULL_DN */
-		qcom,master-en = <1>;
 	};
 
 	gpio@e100 { /* GPIO 34 */
-		qcom,mode = <0>;        /* QPNP_PIN_MODE_DIG_IN */
-		qcom,pull = <4>;	/* QPNP_PIN_PULL_DN */
-		qcom,master-en = <1>;
 	};
 
-	gpio@e200 { /* GPIO 35 */
-		qcom,mode = <0>;        /* QPNP_PIN_MODE_DIG_IN */
-		qcom,pull = <4>;	/* QPNP_PIN_PULL_DN */
-		qcom,master-en = <1>;
+	gpio@e200 { /* GPIO 35 > XO_OUT_A2_EN */
+		//qcom,src-sel = <0>;		/* GPIO */
+		qcom,src-sel = <0>;		/* XO_OUT_A2_EN */
+		qcom,mode = <0>;		/* QPNP_PIN_MODE_DIG_IN */
+		qcom,pull = <5>;		/* QPNP_PIN_PULL_DN --Leon: NP -- */
+		qcom,vin-sel = <2>;		/* add pm8941 S3 = 1.8v */
+		qcom,master-en = <1>;		/* Enable */
+		status = "ok";
 	};
 
 	gpio@e300 { /* GPIO 36 */
 	};
 };
 
-&pm8941_lsid0 {
-	qcom,power-on@800 {
-		interrupts = <0x0 0x8 0x0>,
-							 <0x0 0x8 0x1>,
-							 <0x0 0x8 0x3>,
-							 <0x0 0x8 0x4>,
-							 <0x0 0x8 0x5>;
-		interrupt-names = "kpdpwr", "resin", "kpdpwr-bark",
-			"resin-bark", "kpdpwr-resin-bark";
-
-		qcom,pon_1 {
-			qcom,s1-timer = <6720>;
-			qcom,s2-type = <7>;
-			qcom,use-bark;
-		};
-
-		qcom,pon_2 {
-			/delete-property/ qcom,support-reset;
-		};
-
-		qcom,pon_3 {
-			/delete-property/ qcom,support-reset;
-		};
-	};
-
-	qcom,pm8941_rtc {
-		qcom,qpnp-rtc-alarm-pwrup = <1>;
-	};
-};
-
 &pm8941_mpps {
-	mpp@a000 { /* MPP 1 */
+
+	mpp@a000 { /* MPP 1 - SDC_UIM_VBIAS */
 		status = "disabled";
 	};
 
-	mpp@a100 { /* MPP 2 */
-		qcom,mode = <1>;          /* QPNP_PIN_MODE_DIG_OUT */
-		qcom,out-strength = <1>;  /* QPNP_PIN_OUT_STRENGTH_LOW */
+	mpp@a100 { /* MPP 2 > CHG_PSEL_MPP02 */
+		qcom,mode = <1>;		/* QPNP_PIN_MODE_DIG_OUT */
+		qcom,out-strength = <1>;	/* QPNP_PIN_OUT_STRENGTH_LOW */
 		qcom,master-en = <1>;
 	};
 
-	mpp@a200 { /* MPP 3 */
+	mpp@a200 { /* MPP 3 < TXDAC0_VREF */
 	};
 
 	mpp@a300 { /* MPP 4 */
 	};
 
-	mpp@a400 { /* MPP 5 */
-		qcom,mode = <4>; /* AIN input */
-		qcom,invert = <1>; /* Enable MPP */
-		qcom,ain-route = <0>; /* AMUX 5 */
-		qcom,master-en = <1>; /* ENABLE MPP */
-		qcom,src-sel = <0>; /* CONSTANT */
+	mpp@a400 { /* MPP 5 < VER_ADC0 */
+		qcom,mode = <4>;		/* AIN input */
+		qcom,invert = <1>;		/* Enable MPP */
+		qcom,ain-route = <0>;		/* AMUX 5 */
+		qcom,master-en = <1>;
+		qcom,src-sel = <0>;		/* Function constant */
 	};
 
-	mpp@a500 { /* MPP 6 */
-		/* SPI_ETH_RST config */
-		qcom,mode = <4>; /* AIN input */
-		qcom,invert = <1>; /* Enable MPP */
-		qcom,ain-route = <1>; /* AMUX 6 */
-		qcom,master-en = <1>; /* ENABLE MPP */
-		qcom,src-sel = <0>; /* CONSTANT */
+	mpp@a500 { /* MPP 6 < VER_ADC1 */
+		qcom,mode = <4>;		/* AIN input */
+		qcom,invert = <1>;		/* Enable MPP */
+		qcom,ain-route = <1>;		/* AMUX 6 */
+		qcom,master-en = <1>;
+		qcom,src-sel = <0>;		/* Function constant */
 	};
 
 	mpp@a600 { /* MPP 7 */
-		qcom,mode = <1>;          /* QPNP_PIN_MODE_DIG_OUT */
-		qcom,out-strength = <1>;  /* QPNP_PIN_OUT_STRENGTH_LOW */
-		qcom,master-en = <1>;
 	};
 
-	mpp@a700 { /* MPP 8 */
-		qcom,mode = <1>;          /* QPNP_PIN_MODE_DIG_OUT */
-		qcom,out-strength = <1>;  /* QPNP_PIN_OUT_STRENGTH_LOW */
+	mpp@a700 { /* MPP 8 < USB_CON_THERM */
+		qcom,mode = <1>;		/* QPNP_PIN_MODE_DIG_OUT */
+		qcom,out-strength = <1>;	/* QPNP_PIN_OUT_STRENGTH_LOW */
 		qcom,master-en = <1>;
 	};
 };
@@ -412,23 +318,5 @@
 		qcom,scale-function = <0>;
 		qcom,hw-settle-time = <0>;
 		qcom,fast-avg-setup = <0>;
-	};
-};
-
-&soc {
-	i2c@f9967000 {
-		bq27530@55 {
-			reg = <0x55>;
-			compatible = "ti,bq27530-battery";
-			interrupt-parent = <&msmgpio>;
-			vcc_i2c-supply = <&pm8941_s3>;
-			bq27530,chg-int-gpio = <&msmgpio 144 0x00>;
-			bq27530,fg-int-gpio = <&msmgpio 86 0x00>;
-			bq27530,usb-sw-gpio = <&msmgpio 78 0x00>;
-			bq27530,chg-en-gpio = <&pm8941_gpios 10 0x00>;
-			bq27530,chg-otg-gpio = <&pm8941_gpios 11 0x00>;
-			bq27530,chg-psel-gpio = <&pm8941_gpios 12 0x00>;
-			bq27530,usb-sw-en-gpio = <&pm8941_gpios 14 0x00>;
-		};
 	};
 };
