--- a/arch/arm/boot/dts/k920/msm8974-k920.dtsi
+++ b/arch/arm/boot/dts/k920/msm8974-k920.dtsi
@@ -24,12 +24,70 @@
 	};
 };
 
+&pm8941_lsid0 {
+	qcom,power-on@800 {
+		interrupts = <0x0 0x8 0x0>,
+							 <0x0 0x8 0x1>,
+							 <0x0 0x8 0x3>,
+							 <0x0 0x8 0x4>,
+							 <0x0 0x8 0x5>;
+		interrupt-names = "kpdpwr", "resin", "kpdpwr-bark",
+			"resin-bark", "kpdpwr-resin-bark";
+
+		qcom,pon_1 {
+			qcom,s1-timer = <6720>;
+			qcom,s2-type = <7>;
+			qcom,use-bark;
+		};
+
+		qcom,pon_2 {
+			/delete-property/ qcom,support-reset;
+		};
+
+		qcom,pon_3 {
+			/delete-property/ qcom,support-reset;
+		};
+	};
+
+	qcom,pm8941_rtc {
+		qcom,qpnp-rtc-alarm-pwrup = <1>;
+	};
+};
+
+&pm8941_lsid1 {
+	/* qpnp-vibrator */
+	qcom,vib@c000{
+		status = "okay";
+		compatible = "qcom,qpnp-vibrator";
+		reg = <0xc000 0x100>;
+		label = "vibrator";
+		qcom,vib-timeout-ms = <15000>;
+		qcom,vib-vtg-level-mV = <2850>;
+		qcom,vib-vtg-max-mV = <3100>;
+		qcom,vib-vtg-min-mV = <1200>;
+	};
+};
+
 &soc {
 	serial@f991e000 {
 		status = "ok";
 	};
 
 	i2c@f9924000 {
+		cell-index = <2>;
+		compatible = "qcom,i2c-qup";
+		reg = <0xf9924000 0x1000>;
+		#address-cells = <1>;
+		#size-cells = <0>;
+		reg-names = "qup_phys_addr";
+		interrupts = <0 96 0>;
+		interrupt-names = "qup_err_intr";
+		qcom,i2c-bus-freq = <384000>;
+		qcom,i2c-src-freq = <19200000>;
+		qcom,master-id = <86>;
+		qcom,scl-gpio = <&msmgpio 7 0>;
+		qcom,sda-gpio = <&msmgpio 6 0>;
+
 		/* synaptics s3408 touchscreen */
 		synaptics_s3408@38 {
 			compatible = "synaptics,rmi4";
@@ -46,7 +104,7 @@
 			synaptics,power-down;
 		};
 
-		/* isl29124 RGB light sensor */
+		/* isl29124_f RGB light sensor */
 		isl29124_f@44 {
 			compatible = "isl29124_f";
 			reg = <0x44>;
@@ -56,6 +114,18 @@
 	};
 
 	i2c@f9967000 {
+		cell-index = <0>;
+		compatible = "qcom,i2c-qup";
+		reg = <0Xf9967000 0x1000>;
+		#address-cells = <1>;
+		#size-cells = <0>;
+		reg-names = "qup_phys_addr";
+		interrupts = <0 105 0>;
+		interrupt-names = "qup_err_intr";
+		qcom,i2c-bus-freq = <100000>;
+		qcom,i2c-src-freq = <19200000>;
+		qcom,master-id = <84>;
+
 		/* bq27530 battery */
 		bq27530@55 {
 			reg = <0x55>;
@@ -88,7 +158,7 @@
 		qcom,master-id = <86>;
 
 		/* nxp pn547 nfc */
-		3-0028@28 {
+		pn547@28 {
 			compatible = "nxp,nfc-547";
 			reg = <0x28>;
 			interrupt-parent = <&msmgpio>;
@@ -96,7 +166,6 @@
 			nxp-nfc-547,irq-gpio = <&msmgpio 95 0x00>;
 			nxp-nfc-547,firm-gpio = <&msmgpio 81 0x00>;
 			nxp-nfc-547,ven-gpio = <&msmgpio 102 0x00>;
-			//nxp-nfc-547,clk-req = <&pm894_gpios 35 0x1>;
 			qcom,clk-src = "BBCLK2";
 			qcom,clk-gpio = <&pm8941_gpios 35 0>;
 		};
@@ -135,20 +204,11 @@
 		compatible = "gpio-keys";
 		input-name = "gpio-keys";
 
-		camera_snapshot {
-			label = "camera_snapshot";
-			gpios = <&pm8941_gpios 3 0x1>;
+		vol_down {
+			label = "volume_down";
+			gpios = <&pm8941_gpios 2 0x1>;
 			linux,input-type = <1>;
-			linux,code = <0x2fe>;
-			gpio-key,wakeup;
-			debounce-interval = <15>;
-		};
-
-		camera_focus {
-			label = "camera_focus";
-			gpios = <&pm8941_gpios 4 0x1>;
-			linux,input-type = <1>;
-			linux,code = <0x210>;
+			linux,code = <114>;
 			gpio-key,wakeup;
 			debounce-interval = <15>;
 		};
@@ -161,8 +221,6 @@
 			gpio-key,wakeup;
 			debounce-interval = <15>;
 		};
-
-		/* CHECK ME ! */
 	};
 
 	spi@f9923000 {
@@ -232,7 +290,7 @@
 		qcom,adc1-channel-num = <0x15>; /* VER_ADC1 */
 		qcom,hw_ver-vadc = <&pm8941_vadc>;
 		gpios = <&msmgpio 56 0>, /* VER_GPIO0 */
-			<&msmgpio 92 0>;   /* VER_GPIO1 */
+			<&msmgpio 92 0>; /* VER_GPIO1 */
 	};
 };
 
@@ -334,353 +392,6 @@
 
 &usb3 {
 	qcom,otg-capability;
-};
-
-/ {
-	mtp_batterydata: qcom,battery-data {
-		qcom,rpull-up-kohm = <100>;
-		qcom,vref-batt-therm = <1800000>;
-	};
-};
-
-&pm8941_bms {
-	qcom,enable-fcc-learning;
-	qcom,min-fcc-learning-soc = <20>;
-	qcom,min-fcc-ocv-pc = <30>;
-	qcom,min-fcc-learning-samples = <5>;
-	qcom,fcc-resolution = <10>;
-	status = "ok";
-	qcom,battery-data = <&mtp_batterydata>;
-};
-
-&pm8941_chg {
-	status = "ok";
-	qcom,charging-disabled;
-	qcom,battery-data = <&mtp_batterydata>;
-
-	qcom,chgr@1000 {
-		status = "ok";
-	};
-
-	qcom,buck@1100 {
-		status = "ok";
-	};
-
-	qcom,bat-if@1200 {
-		status = "ok";
-	};
-
-	qcom,usb-chgpth@1300 {
-		status = "ok";
-	};
-
-	qcom,dc-chgpth@1400 {
-		status = "ok";
-	};
-
-	qcom,boost@1500 {
-		status = "ok";
-	};
-
-	qcom,chg-misc@1600 {
-		status = "ok";
-	};
-};
-
-&pm8941_gpios {
-	gpio@c000 { /* GPIO 1 */
-		qcom,mode = <0>;        /* QPNP_PIN_MODE_DIG_IN */
-		qcom,pull = <0>;        /* QPNP_PIN_PULL_UP_30  */
-		qcom,master-en = <1>;
-	};
-
-	gpio@c100 { /* GPIO 2 */
-		qcom,mode = <0>;        /* QPNP_PIN_MODE_DIG_IN */
-		qcom,pull = <0>;        /* QPNP_PIN_PULL_UP_30  */
-		qcom,master-en = <1>;
-	};
-
-	gpio@c200 { /* GPIO 3 */
-		qcom,mode = <0>;        /* QPNP_PIN_MODE_DIG_IN */
-		qcom,pull = <0>;        /* QPNP_PIN_PULL_UP_30  */
-		qcom,vin-sel = <2>;
-		qcom,src-sel = <0>;	/* QPNP_PIN_SEL_FUNC_CONSTANT */
-		qcom,master-en = <1>;
-	};
-
-	gpio@c300 { /* GPIO 4 */
-		qcom,mode = <0>;        /* QPNP_PIN_MODE_DIG_IN */
-		qcom,pull = <0>;        /* QPNP_PIN_PULL_UP_30  */
-		qcom,vin-sel = <2>;     /* QPNP_PIN_VIN2  */
-		qcom,src-sel = <0>;	/* QPNP_PIN_SEL_FUNC_CONSTANT */
-		qcom,master-en = <1>;
-	};
-
-	gpio@c400 { /* GPIO 5 */
-		qcom,mode = <0>;        /* QPNP_PIN_MODE_DIG_IN */
-		qcom,pull = <0>;        /* QPNP_PIN_PULL_UP_30  */
-		qcom,vin-sel = <2>;     /* QPNP_PIN_VIN2  */
-		qcom,src-sel = <0>;	/* QPNP_PIN_SEL_FUNC_CONSTANT */
-		qcom,master-en = <1>;
-	};
-
-	gpio@c500 { /* GPIO 6 */
-		qcom,mode = <0>;        /* QPNP_PIN_MODE_DIG_IN */
-		qcom,pull = <0>;        /* QPNP_PIN_PULL_UP_30  */
-		qcom,master-en = <1>;
-	};
-
-	gpio@c600 { /* GPIO 7 */
-		qcom,mode = <0>;        /* QPNP_PIN_MODE_DIG_IN */
-		qcom,pull = <0>;        /* QPNP_PIN_PULL_UP_30  */
-		qcom,master-en = <1>;
-	};
-
-	gpio@c700 { /* GPIO 8 */
-		qcom,mode = <0>;        /* QPNP_PIN_MODE_DIG_IN */
-		qcom,pull = <0>;        /* QPNP_PIN_PULL_UP_30  */
-		qcom,master-en = <1>;
-	};
-
-	gpio@c800 { /* GPIO 9 */
-		qcom,mode = <1>;          /* QPNP_PIN_MODE_DIG_OUT */
-		qcom,out-strength = <1>;  /* QPNP_PIN_OUT_STRENGTH_LOW */
-		qcom,src-sel = <2>;       /* QPNP_PIN_SEL_FUNC_1  */
-		qcom,master-en = <1>;
-	};
-
-	/*BQ27530_EN*/
-	gpio@c900 { /* GPIO 10 */
-		qcom,mode = <1>;          /* QPNP_PIN_MODE_DIG_OUT */
-		qcom,output-type = <0>;	  /* CMOS */
-		qcom,pull = <5>;		  /* PULL_NO */
-		#qcom,out-strength = <2>;  /* QPNP_PIN_OUT_STRENGTH_MED */
-		qcom,out-strength = <1>;  /* QPNP_PIN_OUT_STRENGTH_LOW */
-		qcom,src-sel = <0>;       /* QPNP_PIN_SEL_FUN_CONSTANT  */
-		qcom,master-en = <1>;
-	};
-
-	gpio@ca00 { /* GPIO 11 */
-		qcom,mode = <1>;          /* QPNP_PIN_MODE_DIG_OUT */
-		qcom,out-strength = <1>;  /* QPNP_PIN_OUT_STRENGTH_LOW */
-		qcom,src-sel = <0>;       /* QPNP_PIN_SEL_FUNC_  */
-		qcom,master-en = <1>;
-	};
-
-	gpio@cb00 { /* GPIO 12 */
-		qcom,mode = <1>;          /* QPNP_PIN_MODE_DIG_OUT */
-		qcom,output-type = <0>;	  /* CMOS */
-		#qcom,out-strength = <2>;  /* QPNP_PIN_OUT_STRENGTH_MED */
-		qcom,src-sel = <0>;       /* QPNP_PIN_SEL_FUN_CONSTANT  */
-		qcom,vin-sel = <0>;     /* QPNP_PIN_VIN2  */
-		qcom,pull = <5>;		  /* PULL_NO */
-		#qcom,src-sel = <2>;       /* QPNP_PIN_SEL_FUNC_1  */
-		qcom,out-strength = <1>;  /* QPNP_PIN_OUT_STRENGTH_LOW */
-		qcom,master-en = <1>;
-	};
-
-	gpio@cc00 { /* GPIO 13 */
-		qcom,mode = <1>;          /* QPNP_PIN_MODE_DIG_OUT */
-		qcom,output-type = <0>;
-		qcom,pull = <5>;
-		qcom,vin-sel = <3>;
-		qcom,out-strength = <1>;  /* QPNP_PIN_OUT_STRENGTH_LOW */
-		qcom,src-sel = <0>;       /* function: output 1*/ 
-		qcom,master-en = <1>;
-	};
-
-	gpio@cd00 { /* GPIO 14 */
-		qcom,mode = <1>;          /* QPNP_PIN_MODE_DIG_OUT */
-		qcom,output-type = <0>;	  /* CMOS */
-		qcom,out-strength = <1>;  /* QPNP_PIN_OUT_STRENGTH_LOW */
-		#qcom,src-sel = <2>;       /* QPNP_PIN_SEL_FUNC_1  */
-		qcom,src-sel = <0>;       /* QPNP_PIN_SEL_FUN_CONSTANT  */
-		qcom,vin-sel = <0>;     /* QPNP_PIN_VIN2  */
-		qcom,master-en = <1>;
-	};
-
-	gpio@ce00 { /* GPIO 15 */
-		qcom,mode = <1>;
-		qcom,output-type = <0>;
-		qcom,pull = <5>;
-		qcom,vin-sel = <2>;
-		qcom,out-strength = <1>;
-		qcom,src-sel = <2>;
-		qcom,master-en = <1>;
-	};
-
-	gpio@cf00 { /* GPIO 16 */
-		qcom,mode = <1>;
-		qcom,output-type = <0>;
-		qcom,pull = <5>;
-		qcom,vin-sel = <2>;
-		qcom,out-strength = <3>;
-		qcom,src-sel = <3>;       /* QPNP_PIN_SEL_FUNC_2  */
-		qcom,master-en = <1>;
-	};
-
-	gpio@d000 { /* GPIO 17 */
-	};
-
-	gpio@d100 { /* GPIO 18 */
-	};
-
-	gpio@d200 { /* GPIO 19 */
-		qcom,mode = <1>;		/* QPNP_PIN_MODE_DIG_OUT */
-		qcom,output-type = <0>;		/* QPNP_PIN_OUT_BUF_CMOS */
-		qcom,pull = <5>;		/* QPNP_PIN_PULL_NO */
-		qcom,vin-sel = <2>;		/* QPNP_PIN_VIN2 */
-		qcom,out-strength = <1>;	/* QPNP_PIN_OUT_STRENGTH_LOW */
-		qcom,src-sel = <0>;		/* QPNP_PIN_SEL_FUNC_CONSTANT */
-		qcom,master-en = <1>;
-	};
-
-	gpio@d300 { /* GPIO 20 */
-		qcom,mode = <1>;          /* QPNP_PIN_MODE_DIG_OUT */
-		qcom,out-strength = <1>;  /* QPNP_PIN_OUT_STRENGTH_LOW */
-		qcom,src-sel = <2>;       /* QPNP_PIN_SEL_FUNC_1  */
-		qcom,master-en = <1>;
-	};
-
-	gpio@d400 { /* GPIO 21 */
-	};
-
-	gpio@d500 { /* GPIO 22 */
-		qcom,mode = <0>;        /* QPNP_PIN_MODE_DIG_IN */
-		qcom,pull = <4>;	/* QPNP_PIN_PULL_DN */
-		qcom,master-en = <1>;
-	};
-
-	gpio@d600 { /* GPIO 23 */
-		qcom,mode = <1>;          /* QPNP_PIN_MODE_DIG_OUT */
-		qcom,out-strength = <1>;  /* QPNP_PIN_OUT_STRENGTH_LOW */
-		qcom,src-sel = <2>;       /* QPNP_PIN_SEL_FUNC_1  */
-		qcom,master-en = <1>;
-	};
-
-	gpio@d700 { /* GPIO 24 */
-		qcom,mode = <1>;          /* QPNP_PIN_MODE_DIG_OUT */
-		qcom,out-strength = <1>;  /* QPNP_PIN_OUT_STRENGTH_LOW */
-		qcom,src-sel = <2>;       /* QPNP_PIN_SEL_FUNC_1  */
-		qcom,master-en = <1>;
-	};
-
-	gpio@d800 { /* GPIO 25 */
-		qcom,mode = <1>;          /* QPNP_PIN_MODE_DIG_OUT */
-		qcom,out-strength = <1>;  /* QPNP_PIN_OUT_STRENGTH_LOW */
-		qcom,src-sel = <2>;       /* QPNP_PIN_SEL_FUNC_1  */
-		qcom,master-en = <1>;
-	};
-
-	gpio@d900 { /* GPIO 26 */
-		qcom,mode = <1>;          /* QPNP_PIN_MODE_DIG_OUT */
-		qcom,out-strength = <1>;  /* QPNP_PIN_OUT_STRENGTH_LOW */
-		qcom,src-sel = <2>;       /* QPNP_PIN_SEL_FUNC_1  */
-		qcom,master-en = <1>;
-	};
-
-	gpio@da00 { /* GPIO 27 */
-		qcom,mode = <0>;        /* QPNP_PIN_MODE_DIG_IN */
-		qcom,pull = <4>;	/* QPNP_PIN_PULL_DN */
-		qcom,master-en = <1>;
-	};
-
-	gpio@db00 { /* GPIO 28 */
-	};
-
-	gpio@dc00 { /* GPIO 29 */
-		qcom,mode = <1>;          /* QPNP_PIN_MODE_DIG_OUT */
-		qcom,out-strength = <1>;  /* QPNP_PIN_OUT_STRENGTH_LOW */
-		qcom,src-sel = <2>;       /* QPNP_PIN_SEL_FUNC_1  */
-		qcom,master-en = <1>;
-	};
-
-	gpio@dd00 { /* GPIO 30 */
-		qcom,mode = <0>;        /* QPNP_PIN_MODE_DIG_IN */
-		qcom,pull = <4>;	/* QPNP_PIN_PULL_DN */
-		qcom,master-en = <1>;
-	};
-
-	gpio@de00 { /* GPIO 31 */
-	};
-
-	gpio@df00 { /* GPIO 32 */
-		qcom,mode = <0>;        /* QPNP_PIN_MODE_DIG_IN */
-		qcom,pull = <4>;	/* QPNP_PIN_PULL_DN */
-		qcom,master-en = <1>;
-	};
-
-	gpio@e000 { /* GPIO 33 */
-		qcom,mode = <0>;        /* QPNP_PIN_MODE_DIG_IN */
-		qcom,pull = <4>;	/* QPNP_PIN_PULL_DN */
-		qcom,master-en = <1>;
-	};
-
-	gpio@e100 { /* GPIO 34 */
-		qcom,mode = <0>;        /* QPNP_PIN_MODE_DIG_IN */
-		qcom,pull = <4>;	/* QPNP_PIN_PULL_DN */
-		qcom,master-en = <1>;
-	};
-
-	gpio@e200 { /* GPIO 35 */
-		//qcom,src-sel = <0>;   /* GPIO */
-		qcom,src-sel = <0>;     /* XO_OUT_A2_EN */
-		qcom,mode = <0>;        /* QPNP_PIN_MODE_DIG_IN */
-		qcom,pull = <5>;	/* QPNP_PIN_PULL_DN --Leon: NP -- */
-		qcom,vin-sel = <2>; 	/* add pm8941 S3 = 1.8v */
-		qcom,master-en = <1>;   /* Enable */
-		status = "ok";
-	};
-
-	gpio@e300 { /* GPIO 36 */
-	};
-};
-
-&pm8941_mpps {
-
-	mpp@a000 { /* MPP 1 */
-		status = "disabled";
-	};
-
-	mpp@a100 { /* MPP 2 */
-		qcom,mode = <1>;          /* QPNP_PIN_MODE_DIG_OUT */
-		qcom,out-strength = <1>;  /* QPNP_PIN_OUT_STRENGTH_LOW */
-		qcom,master-en = <1>;
-	};
-
-	mpp@a200 { /* MPP 3 */
-	};
-
-	mpp@a300 { /* MPP 4 */
-	};
-
-	mpp@a400 { /* MPP 5 */
-		qcom,mode = <4>;          /* AIN input */
-		qcom,invert = <1>;        /* Enable MPP */
-		qcom,ain-route = <0>;     /* AMUX 5 */
-		qcom,master-en = <1>;
-		qcom,src-sel = <0>;       /* Function constant */
-	};
-
-	mpp@a500 { /* MPP 6 */
-		qcom,mode = <4>;          /* AIN input */
-		qcom,invert = <1>;        /* Enable MPP */
-		qcom,ain-route = <1>;     /* AMUX 6 */
-		qcom,master-en = <1>;
-		qcom,src-sel = <0>;       /* Function constant */
-	};
-
-	mpp@a600 { /* MPP 7 */
-		qcom,mode = <1>;          /* QPNP_PIN_MODE_DIG_OUT */
-		qcom,out-strength = <1>;  /* QPNP_PIN_OUT_STRENGTH_LOW */
-		qcom,master-en = <1>;
-	};
-
-	mpp@a700 { /* MPP 8 */
-		qcom,mode = <1>;          /* QPNP_PIN_MODE_DIG_OUT */
-		qcom,out-strength = <1>;  /* QPNP_PIN_OUT_STRENGTH_LOW */
-		qcom,master-en = <1>;
-	};
 };
 
 &slim_msm {
