defconfig: Enable UID_CPUTIME
Used by KernelUidCpuTimeReader

Change-Id: I174bfbae6f59a140eeafabf9a8a23f811f5fea29
Signed-off-by: Michal Chvíla <electrydev@gmail.com>

--- a/arch/arm/configs/cyanogenmod_k920_defconfig
+++ b/arch/arm/configs/cyanogenmod_k920_defconfig
@@ -1322,7 +1322,7 @@ CONFIG_USB_HSIC_SMSC_HUB=y
 CONFIG_TI_DRV2667=y
 CONFIG_NXP_NFC=y
 CONFIG_NXP_TFA9890=y
-# CONFIG_UID_CPUTIME is not set
+CONFIG_UID_CPUTIME=y
 # CONFIG_C2PORT is not set
 
 #
