sound: updated driver from zuk ham
Change-Id: Ib055b4e70e03e7fafee80b7216cba209145fc2d8

--- a/arch/arm/configs/cyanogenmod_k920_defconfig
+++ b/arch/arm/configs/cyanogenmod_k920_defconfig
@@ -2118,6 +2118,7 @@ CONFIG_MFD_CORE=y
 # CONFIG_WCD9304_CODEC is not set
 # CONFIG_WCD9310_CODEC is not set
 CONFIG_WCD9320_CODEC=y
+CONFIG_WCD9XXX_CODEC_CODECID=y
 # CONFIG_WCD9306_CODEC is not set
 # CONFIG_MFD_RC5T583 is not set
 CONFIG_REGULATOR=y
